CppEditor: Add soft assert for unexpected semantic highlighter state

Task-number: QTCREATORBUG-28507
Change-Id: I322c9b806c85d2a013c4014c80f4ca11ca117752
Reviewed-by: hjk <hjk@qt.io>